{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 46,
  "lineage": "41a400b7-1ae1-9d46-fd83-145a16df2e2c",
  "resources": [
    {
      "module": "module.autoscalling",
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:228067644494:loadbalancer/app/terra/2fdd1f84d195e1cf",
            "arn_suffix": "app/terra/2fdd1f84d195e1cf",
            "desync_mitigation_mode": "defensive",
            "dns_name": "terra-1334703553.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:228067644494:loadbalancer/app/terra/2fdd1f84d195e1cf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terra",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0de95e40fdc547186"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0422db6ed3d36bf14"
              },
              {
                "subnet_id": "subnet-0ad88fa2d37827205"
              },
              {
                "subnet_id": "subnet-0ddc7f7076ec19bbe"
              }
            ],
            "subnets": [
              "subnet-0422db6ed3d36bf14",
              "subnet-0ad88fa2d37827205",
              "subnet-0ddc7f7076ec19bbe"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0d4a8c72311f2604b",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.autoscalling.aws_security_group.value",
            "module.vpc_dev.aws_subnet.subnet1",
            "module.vpc_dev.aws_vpc.my-vpc",
            "module.vpc_dev.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.autoscalling",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:228067644494:listener/app/terra/2fdd1f84d195e1cf/b2400944daec88a7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:228067644494:targetgroup/terra/20462cbe22c428ff",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:228067644494:listener/app/terra/2fdd1f84d195e1cf/b2400944daec88a7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:228067644494:loadbalancer/app/terra/2fdd1f84d195e1cf",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.autoscalling.aws_lb.test",
            "module.autoscalling.aws_lb_target_group.test1",
            "module.autoscalling.aws_security_group.value",
            "module.vpc_dev.aws_subnet.subnet1",
            "module.vpc_dev.aws_vpc.my-vpc",
            "module.vpc_dev.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.autoscalling",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:228067644494:targetgroup/terra/20462cbe22c428ff",
            "arn_suffix": "targetgroup/terra/20462cbe22c428ff",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:228067644494:targetgroup/terra/20462cbe22c428ff",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "terra",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d4a8c72311f2604b"
          },
          "dependencies": [
            "module.vpc_dev.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.autoscalling",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "value",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:228067644494:security-group/sg-0de95e40fdc547186",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de95e40fdc547186",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terra",
            "name_prefix": "",
            "owner_id": "228067644494",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d4a8c72311f2604b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_dev.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:228067644494:internet-gateway/igw-037190b1c5d09d47a",
            "id": "igw-037190b1c5d09d47a",
            "owner_id": "228067644494",
            "vpc_id": "vpc-0d4a8c72311f2604b"
          },
          "dependencies": [
            "module.vpc_dev.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:228067644494:route-table/rtb-089bb30a9d4416e51",
            "id": "rtb-089bb30a9d4416e51",
            "owner_id": "228067644494",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-037190b1c5d09d47a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d4a8c72311f2604b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_dev.aws_internet_gateway.gw",
            "module.vpc_dev.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038758a250a13381a",
            "route_table_id": "rtb-089bb30a9d4416e51",
            "subnet_id": "subnet-0ddc7f7076ec19bbe"
          },
          "dependencies": [
            "module.vpc_dev.aws_internet_gateway.gw",
            "module.vpc_dev.aws_route_table.rt",
            "module.vpc_dev.aws_subnet.subnet1",
            "module.vpc_dev.aws_vpc.my-vpc",
            "module.vpc_dev.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031ad57c2694d5f7c",
            "route_table_id": "rtb-089bb30a9d4416e51",
            "subnet_id": "subnet-0422db6ed3d36bf14"
          },
          "dependencies": [
            "module.vpc_dev.aws_route_table.rt",
            "module.vpc_dev.aws_subnet.subnet1",
            "module.vpc_dev.aws_vpc.my-vpc",
            "module.vpc_dev.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023c4e3de099221e1",
            "route_table_id": "rtb-089bb30a9d4416e51",
            "subnet_id": "subnet-0ad88fa2d37827205"
          },
          "dependencies": [
            "module.vpc_dev.aws_route_table.rt",
            "module.vpc_dev.aws_subnet.subnet1",
            "module.vpc_dev.aws_vpc.my-vpc",
            "module.vpc_dev.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:228067644494:subnet/subnet-0ddc7f7076ec19bbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddc7f7076ec19bbe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "228067644494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "[count.index]"
            },
            "tags_all": {
              "name": "[count.index]"
            },
            "vpc_id": "vpc-0d4a8c72311f2604b"
          },
          "dependencies": [
            "module.vpc_dev.aws_vpc.my-vpc",
            "module.vpc_dev.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:228067644494:subnet/subnet-0422db6ed3d36bf14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0422db6ed3d36bf14",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "228067644494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "[count.index]"
            },
            "tags_all": {
              "name": "[count.index]"
            },
            "vpc_id": "vpc-0d4a8c72311f2604b"
          },
          "dependencies": [
            "module.vpc_dev.aws_vpc.my-vpc",
            "module.vpc_dev.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:228067644494:subnet/subnet-0ad88fa2d37827205",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad88fa2d37827205",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "228067644494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "[count.index]"
            },
            "tags_all": {
              "name": "[count.index]"
            },
            "vpc_id": "vpc-0d4a8c72311f2604b"
          },
          "dependencies": [
            "module.vpc_dev.aws_vpc.my-vpc",
            "module.vpc_dev.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_dev",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:228067644494:vpc/vpc-0d4a8c72311f2604b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/18",
            "default_network_acl_id": "acl-06a5c898be94fedb5",
            "default_route_table_id": "rtb-004a3c832df29756b",
            "default_security_group_id": "sg-0ac31dd7ff5ad2c13",
            "dhcp_options_id": "dopt-03ffcd14dfeb0f685",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d4a8c72311f2604b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-004a3c832df29756b",
            "owner_id": "228067644494",
            "tags": {
              "name": "vpc-"
            },
            "tags_all": {
              "name": "vpc-"
            }
          }
        }
      ]
    }
  ]
}